--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>  
 
     <script src="http://unpkg.com/jquery"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="tvmaze.js"></script>
 
     </div>
